# RoboGrindScanner

./: .gitignore  .gitmodules  MiR-Infos.txt  README.md  ros-installation.txt  setup.sh  start.sh  start_simulation.sh  starting.txt  ur-infos.txt
catkin_ws/devel/: .catkin  .rosinstall  env.bat  local_setup.bat  setup.bat
catkin_ws/devel/lib/artec/: testscan.ilk
catkin_ws/devel/lib/pkgconfig/: artec.pc  roboscanner.pc
catkin_ws/devel/share/artec/cmake/: artecConfig.cmake
catkin_ws/devel/share/roboscanner/cmake/: roboscannerConfig.cmake
catkin_ws/src/artec/: CMakeLists.txt
catkin_ws/src/artec/include/artec/sdk/algorithms/: AlgorithmSdkDefines.h  Algorithms.h  IAlgorithm.h  Log.h
catkin_ws/src/artec/include/artec/sdk/base/: AlgorithmWorkset.h  BaseSdkDefines.h  Conversions.h  Errors.h  GenericMatrix.h  IArray.h  IBlob.h  ICancellationToken.h  ICancellationTokenSource.h  ICompositeContainer.h  ICompositeMesh.h  IFrameMesh.h  IImage.h  IJob.h  IJobObserver.h  IMesh.h  IModel.h  IModelInfo.h  IProgress.h  IProgressInfo.h  IRangeImageCylindric.h  IRangeImagePlanar.h  IRef.h  IRevision.h  IScan.h  IString.h  ITexture.h  Log.h  Matrix.h  MeshFlags.h  Point.h  Range.h  Rect.h  RefBase.h  ScannerType.h  TArrayRef.h  TRef.h  TimeStamp.h  Types.h  Uuid.h
catkin_ws/src/artec/include/artec/sdk/base/io/: AopIO.h  BmpIO.h  BuffIO.h  ImageIO.h  JpgIO.h  ObjIO.h  PlyIO.h  PngIO.h  StlIO.h
catkin_ws/src/artec/include/artec/sdk/capturing/: CaptureSdkDefines.h  IArrayFrame.h  IArrayScannerId.h  IFrame.h  IFrameProcessor.h  IScanner.h  IScannerObserver.h  Log.h  ScannerInfo.h
catkin_ws/src/artec/include/artec/sdk/project/: EntryInfo.h  EntryType.h  IProject.h  Log.h  ProjectCopierSettings.h  ProjectDeleterSettings.h  ProjectLoaderSettings.h  ProjectSaverSettings.h  ProjectSdkDefines.h  ProjectSettings.h
catkin_ws/src/artec/include/artec/sdk/scanning/: IArrayScanner.h  IScanningProcedure.h  IScanningProcedureBundle.h  IScanningProcedureObserver.h  Log.h  ScanningSdkDefines.h
catkin_ws/src/artec/lib/: artec-sdk-algorithms.lib  artec-sdk-base.lib  artec-sdk-capturing.lib  artec-sdk-project.lib  artec-sdk-scanning.lib
catkin_ws/src/artec/src/: artec.cpp  getDistance.cpp  testAblauf.cpp
catkin_ws/src/robo_arm/: CMakeLists.txt  package.xml  python_tutorial.launch  setup.py
catkin_ws/src/robo_arm/config/: ur3.rviz
catkin_ws/src/robo_arm/include/robo_arm/: positioning.py  ur.py  util.py  waypointlist.py
catkin_ws/src/robo_arm/launch/: reallife.launch  simulation.launch
catkin_ws/src/robo_arm/src/: artec_comm_test.py  ballhaus.py  manager.py  tutorial.py  ur_controller.py
